[project]
name = "skaha"
version = "1.4.1"
requires-python = ">=3.9"
description = "Python Client for CANFAR Science Platform"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["skaha", "canfar", "python", "client", "container", "platform"]
authors =[
    {"name"="Shiny Brar", "email"="shiny.brar@nrc-cnrc.gc.ca"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "click>=8.1.7",
    "defusedxml>=0.7.1",
    "pydantic>=2.9.2",
    "requests>=2.32.3",
    "toml>=0.10.2",
    "vos>=3.6.1.1",
]

[project.urls]
"homepage"="https://shinybrar.github.io/skaha/"
"repository"="https://github.com/shinybrar/skaha"
"documentation"="https://shinybrar.github.io/skaha/"
"changelog"="https://shinybrar.github.io/skaha/changelog/"
"issues"="https://github.com/shinybrar/skaha/issues"

[tool.uv]
dev-dependencies = [
    "black>=23",
    "mkdocs-git-revision-date-localized-plugin>=1.2.9",
    "mkdocs-material>=9.5.41",
    "mkdocstrings-python>=1",
    "mypy>=1.12.0",
    "pre-commit>=3",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.9",
    "types-toml>=0.10.8.20240310",
    "types-requests>=2.32.0.20241016",
    "types-defusedxml>=0.7.0.20240117",
    "ipython>=8.18.1",
]
